# yamt-vita

./: CMakeLists.txt  README.md  create_vpk.sh
basic/: CMakeLists.txt
basic/plugin/: main.c  tai_compat.h  yamt.yml
basic/src/: main.c
plugin/: yamt.suprx  yamt_360.skprx  yamt_365.skprx
plugin/helper/: CMakeLists.txt  hyamt.yml  logging.h  main.c
plugin/kernel/: CMakeLists.txt  defs.h  main.c  tai_compat.c  tai_compat.h  yamt.yml
plugin/kernel_lite/: CMakeLists.txt  defs.h  main.c  tai_compat.c  tai_compat.h  yamt.yml
plugin/usb_uo/: CMakeLists.txt  logging.h  main.c  usbuo.yml
plugin/user/: CMakeLists.txt  FatFormatProxy.h  language.h  peripherals_settings.xml  user.c  user.yml
plugin/user_lite/: CMakeLists.txt  language.h  peripherals_settings.xml  user.c
res/: template.xml
src/: main.c
